welcome.lessons.welcome.array.has271.Has271.scala.error
has271:14: error: not found: value presence123
  return presence123
         ^